--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.dcendents.android-maven' // 增加
 apply plugin: 'android-maven'
-apply plugin: 'maven'
+apply plugin:'maven'
+group='com.github.veargithub'
 
 android {
     compileSdkVersion 28
