--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".DemoActivity1">
+
+        </activity>
+        <activity android:name=".DemoActivity2" />
+        <activity android:name=".IndexActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DemoActivity2" />
 
     </application>
 </manifest>
