--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DemoActivity3" />
+        <activity android:name=".DemoActivity4" />
 
     </application>
 </manifest>
